--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@
     <center><boxtitle1><b>contact me</b></boxtitle1></center>
     <div class="center-text">
     <boxtext1><br /><ul class=""><li id=""><a href="https://www.instagram.com/skyverion/">instagram: skyverion</a></li></boxtext1>
-    <boxtext1><br /><li id="phone" onmouseover="copyTextHint()" onmouseleave="baseText()" onclick="copyText()">phone number: 218-464-0463</li></boxtext1>
+    <boxtext1><br /><li id="phone" onmouseover="copyTextHint()" onmouseleave="baseText()" onclick="copyText()">phone number: 507-430-0823</li></boxtext1>
     <boxtext1><br /><li id="email" onmouseover="ecopyTextHint()" onmouseleave="ebaseText()" onclick="ecopyText()">email: keagan @ skyverion.com</li></boxtext1>
-    <boxtext1><br /><li id="mail" onmouseover="mcopyTextHint()" onmouseleave="mbaseText()" onclick="mcopyText()">mailing: 529 West 4th St Unit 1, Duluth, MN 55806</li></ul></boxtext1>
+    <boxtext1><br /><li id="mail" onmouseover="mcopyTextHint()" onmouseleave="mbaseText()" onclick="mcopyText()">mailing: P.O. Box 32, Morgan, MN 56266</li></ul></boxtext1>
     </div>
   </div>
     <div class="flex-item-right">
